# push_swap

./: 00  ARG=4 67 3 87 23  CMakeLists.txt  Makefile  author  checker  checker.c  commands.c  commands_next.c  creat_stack.c  do_commands.c  free_or_del.c  get_commands.c  main.c  push_swap  push_swap.c  push_swap.h  separate.c  solver_algo.c  t  util.c
checker.dSYM/Contents/Resources/DWARF/: checker
ft_printf/: Makefile  bonus_wildcard.c  ft_fprintf.c  ft_printf.c  ft_printf.h  output_c_s.c  output_f.c  output_i_d.c  output_o.c  output_p.c  output_persent.c  output_u.c  output_x.c  parser.c
ft_printf/libft/: Makefile  ft_bzero.c  get_next_line.c  libft.h
